# embedded-logger

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/receiver/: CMakeLists.txt  receiver_main.c
apps/sender/: CMakeLists.txt  sender_main.c
config/: config.ini  receiver.ini
docs/: ARCHITECTURE.md
include/: logger.h  logger_crash.h  logger_crypto.h  logger_protection.h  logger_storage.h  logger_transport.h
src/core/: logger_core.c  logger_crash.c  logger_storage.c
src/crypto/: logger_crypto.c
src/protection/: logger_protection.c
src/transport/: logger_transport.c
tests/: CMakeLists.txt  test_logger.cpp
